--- a/SA09_URD_Endoderm.Rmd
+++ b/SA09_URD_Endoderm.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "SA09: Hydra URD Endoderm"
 author: "Jeff Farrell"
-date: "October 1, 2018"
+date: "October 1, 2018, updated March 19, 2019"
 linestretch: 0.5
 output:
  pdf_document:
@@ -28,12 +28,6 @@ main.path <- "~/Dropbox/HydraURDSubmission/"
 
 # Build output directory
 dir.create(paste0(main.path, "URD/Endoderm/"), recursive=T)
-```
-
-```{r next-version, include=F}
-# Load functions that will be in URD 1.1 release
-source("~/URD/URD/ForFuture/NMFDoublets.R")
-source("~/URD/URD/ForFuture/geneLowess.R")
 ```
 
 # Load Data
@@ -366,7 +360,7 @@ gridExtra::grid.arrange(grobs=list(
 
 # Finding spatially varying genes
 
-Since in this trajectory, "pseudotime" is really a proxy for spatial location (foot to head), we can find the spatially varying genes by finding those that vary in pseudotime. We group cells 5 at a time and calculate a spline curve that fits the mean expression (vs. pseudotime) of each group of 5 cells. We then consider those genes spatially varying that are: (1) expressed (present in at least 1% of cells, mean expression > 0.5 in at least one group of 5 cells, spline curve > 0.5 at some point), (2) vary significantly (their spline curve varies at least 33%), (3) are well fit (noise is usually poorly fit, here we threshold on the sum of squared residuals).
+Since in this trajectory, "pseudotime" is really a proxy for spatial location (foot to head), we can find the spatially varying genes by finding those that vary in pseudotime. We group cells 5 at a time and calculate a spline curve that fits the mean expression (vs. pseudotime) of each group of 5 cells. We then consider those genes spatially varying that are: (1) are well fit by our spline curve (noisy expression can look spatial, but is poorly fit), (2) vary significantly (their spline curve varies at least 33%-50%, depending on how well fit they are, and their log2 expression changes at least 0.75 across the trajectory), (3) are better fit by their spline curve than a flat line with slope 0.
 
 ## Calculate varying genes
 
@@ -379,17 +373,11 @@ endo.genes <- names(frac.exp)[which(frac.exp > 0.01)]
 tentacle.spline <- geneSmoothFit(hydra.en.tree, method="spline", pseudotime="pseudotime", cells = cellsInCluster(hydra.en.tree, "segment", c("47", "46")), genes = endo.genes, moving.window = 1, cells.per.window = 5, spar=0.9)
 hypo.spline <- geneSmoothFit(hydra.en.tree, method="spline", pseudotime="pseudotime", cells = cellsInCluster(hydra.en.tree, "segment", c("47", "11")), genes = endo.genes, moving.window = 1, cells.per.window = 5, spar=0.9)
 
-# Which genes have a spline curve and actual mean expression that crosses 0.5?
-tentacle.max.mean.spline <- apply(tentacle.spline$mean.smooth, 1, max)
-hypo.max.mean.spline <- apply(hypo.spline$mean.smooth, 1, max)
-tentacle.genes.wellexpressed <- names(which(tentacle.max.mean.spline > 0.5))
-hypo.genes.wellexpressed <- names(which(hypo.max.mean.spline > 0.5))
-
-# Which genes change in their scaled log2 mean expression value by at least 33%?
-tentacle.change.scale <- apply(tentacle.spline$scaled.smooth, 1, function(x) diff(range(x)))
-hypo.change.scale <- apply(hypo.spline$scaled.smooth, 1, function(x) diff(range(x)))
-tentacle.genes.scale <- names(which(tentacle.change.scale >= 0.33))
-hypo.genes.scale <- names(which(hypo.change.scale >= 0.33))
+# Which genes change in their actual mean expression value by at least 0.75?
+tentacle.change.real <- apply(tentacle.spline$mean.smooth, 1, function(x) diff(range(x)))
+hypo.change.real <- apply(hypo.spline$mean.smooth, 1, function(x) diff(range(x)))
+tentacle.genes.mean <- names(which(tentacle.change.real >= 0.75))
+hypo.genes.mean <- names(which(hypo.change.real >= 0.75))
 
 # Which genes are well fit by the spline curves? (Noise is usually poorly fit by a curve)
 tentacle.spline.fit <- apply(tentacle.spline$scaled.smooth - tentacle.spline$scaled.expression.red, 1, function(i) sum(i^2))
@@ -398,10 +386,37 @@ tentacle.spline.fit.norm <- tentacle.spline.fit / ncol(tentacle.spline$scaled.sm
 hypo.spline.fit.norm <- hypo.spline.fit / ncol(hypo.spline$scaled.smooth)
 tentacle.wellfit <- names(which(tentacle.spline.fit.norm <= 0.02))
 hypo.wellfit <- names(which(hypo.spline.fit.norm <= 0.02))
-  
+
+# Which genes change in their scaled log2 mean expression value sufficiently?
+# At least 33%, and requiring more change the more poorly fit the data is
+# by its spline curve.
+tentacle.change.scale <- apply(tentacle.spline$scaled.smooth, 1, function(x) diff(range(x)))
+hypo.change.scale <- apply(hypo.spline$scaled.smooth, 1, function(x) diff(range(x)))
+
+tentacle.genes.scale <- names(which(tentacle.change.scale >= tentacle.spline.fit.norm * .15/0.02 + 0.33))
+hypo.genes.scale <- names(which(hypo.change.scale >= hypo.spline.fit.norm * .15/0.02 + 0.33))
+
+# Ensure that genes are fit by the spline curve significantly better than a flat line of slope 0.
+# (Weighted by distance to next point in pseudotime to compensate for point density)
+tent.w <- ncol(tentacle.spline$scaled.smooth) - 1
+tent.weight <- diff(as.numeric(colnames(tentacle.spline$scaled.smooth))) * 1000
+tent.spline.fit.weighted <- apply(tentacle.spline$scaled.smooth[,1:tent.w] - tentacle.spline$scaled.expression.red[,1:tent.w], 1, function(i) sum(tent.weight * i^2))
+
+hypo.w <- ncol(hypo.spline$scaled.smooth) - 1
+hypo.weight <- diff(as.numeric(colnames(hypo.spline$scaled.smooth))) * 1000
+hypo.spline.fit.weighted <- apply(hypo.spline$scaled.smooth[,1:hypo.w] - hypo.spline$scaled.expression.red[,1:hypo.w], 1, function(i) sum(hypo.weight * i^2))
+
+tent.flat.fit.weighted <- apply(tentacle.spline$scaled.expression.red[,1:tent.w], 1, function(x) sum(tent.weight * (x - mean(x))^2))
+tent.spline.fit.ratio <- log2(tent.flat.fit.weighted / tent.spline.fit.weighted)
+tent.spline.fit.betterthanflat <- names(which(tent.spline.fit.ratio > 0.25))
+
+hypo.flat.fit.weighted <- apply(hypo.spline$scaled.expression.red[,1:hypo.w], 1, function(x) sum(hypo.weight * (x - mean(x))^2))
+hypo.spline.fit.ratio <- log2(hypo.flat.fit.weighted / hypo.spline.fit.weighted)
+hypo.spline.fit.betterthanflat <- names(which(hypo.spline.fit.ratio > 0.25))
+
 # Take the intersection of those genes and use them as the 'varying genes' in the heatmap & analysis
-tentacle.genes <- intersect(intersect(tentacle.genes.scale, tentacle.wellfit), tentacle.genes.wellexpressed)
-hypo.genes <- intersect(intersect(hypo.genes.scale, hypo.wellfit), hypo.genes.wellexpressed)
+tentacle.genes <- intersect(intersect(intersect(tentacle.genes.scale, tentacle.genes.mean), tentacle.wellfit), tent.spline.fit.betterthanflat)
+hypo.genes <- intersect(intersect(intersect(hypo.genes.scale, hypo.genes.mean), hypo.wellfit), hypo.spline.fit.betterthanflat)  
 
 ## Combine pieces of spline fits into a single list for multi-plotting
 # Identify the pseudotime of the branchpoint
@@ -411,8 +426,8 @@ foot.only.spline <- cropSmoothFit(tentacle.spline, pt.max=pt.crop)
 hypostome.only.spline <- cropSmoothFit(hypo.spline, pt.min=pt.crop)
 tentacle.only.spline <- cropSmoothFit(tentacle.spline, pt.min=pt.crop)
 # Combine into a list; Names in the plots are determined by names of the smooth objects in the list
-splines <- list(foot.only.spline, hypostome.only.spline, tentacle.only.spline)
-names(splines) <- c("Foot/Body", "Hypostome", "Tentacle")
+splines <- list(foot.only.spline, tentacle.only.spline, hypostome.only.spline)
+names(splines) <- c("Foot/Body", "Tentacle", "Hypostome")
 ```
 
 ## Spline plots
@@ -427,69 +442,171 @@ plotSmoothFitMultiCascade(smoothed.fits = splines, genes=endoderm.genes.plot, sc
 
 ## Heatmaps
 
+### Heatmap of all significantly spatially varying genes
+
 Finally, we can make heatmaps of the expression of all of the genes that we found to vary spatially. These we save as PDF output because they do not perform well inside of R Markdown.
 
-```{r heatmap-tentacle}
-# Heatmap Basics
+```{r heatmap-overview}
+# Determine color scale for heatmap
 cols <- scales::gradient_n_pal(RColorBrewer::brewer.pal(9, "YlOrRd"))(seq(0,1,length.out = 50))
 
-# Get the scaled data, z-score it, and set values <0 to 0, the hierarchical cluster.
-# This emphasizes clustering on regions of peak expression for a gene.
-se <- tentacle.spline$scaled.expression[tentacle.genes,]
-se.sd <- apply(se, 1, sd)
-se.mean <- apply(se, 1, mean)
-se.z <- sweep(sweep(se, 1, se.mean, "-"), 1, se.sd, "/")
-se.z[se.z < 0] <- 0
-h.sez <- as.dendrogram(hclust(dist(se.z)))
-
-# Find a 'peak pseudotime' for each gene by taking the weighted average of
-# each window's pseudotime, weighted by the expression z-score (>0) within it
-# Can use this to reorder the dendrogram to try to put it in pseudotime order.
-pt.wm <- apply(se.z, 1, function(w) {
-  weighted.mean(x=as.numeric(colnames(se.z)), w=w)
+# Reduce the data in the three splines, such that each block is minimum 0.01
+# pseudotime; in this case, each block will be >= 5 cells, >= pseudotime 0.01
+splines.reduced <- lapply(names(splines), function(n) {
+  s <- splines[[n]]
+  l <- tolower(substr(n, 1, 1))
+  colnames(s$mean.expression) <- paste0(l, as.character(round(as.numeric(colnames(s$mean.expression)), digits=2)))
+  s$mean.expression <- matrixReduce(s$mean.expression)
+  colnames(s$mean.smooth) <- paste0(l, as.character(round(as.numeric(colnames(s$mean.smooth)), digits=2)))
+  s$mean.smooth <- matrixReduce(s$mean.smooth)
+  return(s)
 })
 
+# Combine the three splines into a single table & rescale maximum across all regions
+me <- do.call("cbind", lapply(splines.reduced, function(s) s$mean.expression))
+ms <- do.call("cbind", lapply(splines.reduced, function(s) s$mean.smooth))
+se <- sweep(me, 1, apply(me, 1, min), "-")
+se <- sweep(se, 1, apply(se, 1, max), "/")
+ss <- sweep(ms, 1, apply(ms, 1, min), "-")
+ss <- sweep(ss, 1, apply(ss, 1, max), "/")
+
+# Get all hypo & tentacle genes
+endo.genes.plot <- unique(c(tentacle.genes, hypo.genes))
+
+# Hierarchical cluster based on smoothed expression
+h.ss <- hclust(dist(as.matrix(ss[endo.genes.plot,])), method = "ward.D2")
+h.ss.d <- as.dendrogram(h.ss)
+k=20 # Cluster number chosen by eye.
+h.ss.clust <- cutree(h.ss, k=k)
+
+# Get cluster order as it will be in the heatmap
+clust.order <- unique(h.ss.clust[h.ss$order])
+h.ss.clust.ord <- plyr::mapvalues(from=clust.order, to=1:k, x = h.ss.clust)
+
+# Generate cluster color vector
+cluster.h <- seq(0,1,length.out=k+1)
+cluster.s <- rep(c(1, 0.75), length=k)
+cluster.v <- rep(c(1, 0.75), length=k)
+cluster.colors <- hsv(h=cluster.h[1:k], s=cluster.s, v=cluster.v)
+h.ss.clust.col <- plyr::mapvalues(from=as.character(1:k), to=cluster.colors, x=h.ss.clust.ord)
+
 # Generate the actual heatmap and save as a PDF.
-font.size <- 0.08
-pdf(paste0(main.path, "URD/Endoderm/Endoderm-Varying-Tentacle.pdf"), width=17, height=22)
-gplots::heatmap.2(as.matrix(se), Rowv=reorder(h.sez, max(pt.wm)-pt.wm, agglo.FUN=median), Colv=F, dendrogram="none", col=cols, trace="none", density.info="none", key=F, cexCol=0.8, cexRow=font.size, margins = c(5,8), lwid=c(0.3,4), lhei=c(0.4, 4), labCol=NA)
-title("Endoderm: Foot to Tentacle", line=-1, adj=0.48, cex.main=4)
+pdf(paste0(main.path, "URD/Endoderm/Endoderm-Varying.pdf"), width=17, height=22)
+# Plot the heatmap
+gplots::heatmap.2(as.matrix(ss[endo.genes.plot[h.ss$order],]), Rowv=F, RowSideColors=h.ss.clust.col[h.ss$order], Colv=F, dendrogram="none", col=cols, trace="none", density.info="none", key=F, cexCol=0.8, cexRow=0.08, margins = c(12,8), lwid=c(0.3,4), lhei=c(0.3, 4), labCol=NA, colsep=c(46, 70), sepwidth=c(1,1))
+# Put a title on it
+title("Endoderm Spatial Expression", line=-1, adj=0.48, cex.main=4)
+# Add tissue labels to the bottom
+title("Foot / Body Column", line=-100.5, adj=0.25, cex.main=2)
+title("Tentacle", line=-100.5, adj=0.68, cex.main=2)
+title("Hypo", line=-100.5, adj=0.895, cex.main=2)
 dev.off()
 ```
 
-```{r}
-# Heatmap Basics
-cols <- scales::gradient_n_pal(RColorBrewer::brewer.pal(9, "YlOrRd"))(seq(0,1,length.out = 50))
+### Heatmap cluster expression profiles
 
-# Get the scaled data, z-score it, and set values <0 to 0, the hierarchical cluster.
-# This emphasizes clustering on regions of peak expression for a gene.
-se <- hypo.spline$scaled.expression[hypo.genes,]
-se.sd <- apply(se, 1, sd)
-se.mean <- apply(se, 1, mean)
-se.z <- sweep(sweep(se, 1, se.mean, "-"), 1, se.sd, "/")
-se.z[se.z < 0] <- 0
-h.sez <- as.dendrogram(hclust(dist(se.z)))
+We clustered the expression of these spatially varying genes in order to describe the overall common spatial expression patterns.
 
-# Find a 'peak pseudotime' for each gene by taking the weighted average of
-# each window's pseudotime, weighted by the expression z-score (>0) within it
-# Can use this to reorder the dendrogram to try to put it in pseudotime order.
-pt.wm <- apply(se.z, 1, function(w) {
-  weighted.mean(x=as.numeric(colnames(se.z)), w=w)
+```{r heatmap-cluster-profiles}
+# Make a spline object that aggregates the expression of genes from each cluster as their mean
+
+# Make fake spline object by running aggregate on all its slots
+splines.clusters <- lapply(splines, function(s) {
+  so <- s
+  # Aggregate by mean across clusters
+  so$scaled.expression <- stats::aggregate(s$scaled.expression[endo.genes.plot,], by=list(h.ss.clust.ord[endo.genes.plot]), FUN=mean)
+  # Rename rows to add a leading 0 to 1-9 so ggplot2 will sort correctly
+  rownames(so$scaled.expression) <- sprintf("%02d",as.numeric(rownames(so$scaled.expression)))
+  so$mean.expression <- stats::aggregate(s$mean.expression[endo.genes.plot,], by=list(h.ss.clust.ord[endo.genes.plot]), FUN=mean)
+  rownames(so$mean.expression) <- sprintf("%02d",as.numeric(rownames(so$mean.expression)))
+  so$scaled.smooth <- stats::aggregate(s$scaled.smooth[endo.genes.plot,], by=list(h.ss.clust.ord[endo.genes.plot]), FUN=mean)
+  rownames(so$scaled.smooth) <- sprintf("%02d",as.numeric(rownames(so$scaled.smooth)))
+  so$mean.smooth <- stats::aggregate(s$mean.smooth[endo.genes.plot,], by=list(h.ss.clust.ord[endo.genes.plot]), FUN=mean)
+  rownames(so$mean.smooth) <- sprintf("%02d",as.numeric(rownames(so$mean.smooth)))
+  so$mean.expression.red <- stats::aggregate(s$mean.expression.red[endo.genes.plot,], by=list(h.ss.clust.ord[endo.genes.plot]), FUN=mean)
+  rownames(so$mean.expression.red) <- sprintf("%02d",as.numeric(rownames(so$mean.expression.red)))
+  so$scaled.expression.red <- stats::aggregate(s$scaled.expression.red[endo.genes.plot,], by=list(h.ss.clust.ord[endo.genes.plot]), FUN=mean)
+  rownames(so$scaled.expression.red) <- sprintf("%02d",as.numeric(rownames(so$scaled.expression.red)))
+  return(so)
 })
 
-# Generate the actual heatmap and save as a PDF.
-font.size <- 0.08
-pdf(paste0(main.path, "URD/Endoderm/Endoderm-Varying-Hypostome.pdf"), width=17, height=22)
-gplots::heatmap.2(as.matrix(se), Rowv=reorder(h.sez, max(pt.wm)-pt.wm, agglo.FUN=median), Colv=F, dendrogram="none", col=cols, trace="none", density.info="none", key=F, cexCol=0.8, cexRow=font.size, margins = c(5,8), lwid=c(0.3,4), lhei=c(0.4, 4), labCol=NA)
-title("Endoderm: Foot to Hypostome", line=-1, adj=0.48, cex.main=4)
+# Plot expression profiles of each cluster
+pdf(paste0(main.path, "URD/Endoderm/Endoderm-Cluster-Profiles.pdf"), width=8.5, height=11)
+plotSmoothFitMultiCascade(splines.clusters, sort(rownames(splines.clusters$`Foot/Body`$mean.expression)), scaled = T, plot.data=T, colors=c("Foot/Body"="#FF8C00", "Hypostome"="#1E90FF", "Tentacle"="#32CD32"), ncol=4) + ggtitle("Endoderm Spatial Cluster Expression Profiles")
+dev.off()
+```
+
+### "Zoom-in" heatmaps
+
+We also present a zoom-in of the spatial expression heatmaps for readability.
+
+```{r heatmap-clusters}
+## Make booklet of heatmaps for each cluster
+
+# Choose clusters for each page
+cluster.ends <- c(2, 6, 14, 16, 18, 20)
+cluster.starts <- c(1, head(cluster.ends, -1) + 1)
+
+pdf(paste0(main.path, "URD/Endoderm/Endoderm-Cluster-Heatmaps.pdf"), width=17, height=22)
+for (c in 1:length(cluster.ends)) {
+  # Which clusters to put in this heatmap
+  c.use <- cluster.starts[c]:cluster.ends[c]
+  # Determine which rows to plot
+  rp <- h.ss$order[which(h.ss.clust.ord[h.ss$order] %in% c.use)]
+  # Make the heatmap
+  gplots::heatmap.2(as.matrix(ss[endo.genes.plot[rp],]), Rowv=F, RowSideColors=h.ss.clust.col[rp], Colv=F, dendrogram="none", col=cols, trace="none", density.info="none", key=F, cexCol=0.8, cexRow=0.7, margins = c(12,15), lwid=c(0.3,4), lhei=c(0.3, 4), labCol=NA, colsep=c(46, 70), sepwidth=c(1,1))
+  # Add title
+  title(paste0("Endoderm Spatial: Clusters ", cluster.starts[c], " to ", cluster.ends[c]), line=-1, adj=0.48, cex.main=4)
+  # Add tissue labels to bottom
+  title("Foot / Body Column", line=-100.5, adj=0.23, cex.main=2)
+  title("Tentacle", line=-100.5, adj=0.635, cex.main=2)
+  title("Hypo", line=-100.5, adj=0.84, cex.main=2)
+}
+dev.off()
+```
+
+### Transcription factor heatmaps
+ 
+And, finally, we isolated the transcription factors that vary spatially in the tissue, as potential candidates for important regulators of the differentiation of particular tissues.
+
+```{r}
+# Load list of Hydra TFs
+tfs <- read.table(paste0(main.path, "objects/aepLRv2_TFs.txt"), header=T, stringsAsFactors = F)
+tf.genes <- tfs$ID
+
+# Get endoderm varying genes that are also TFs
+endo.spatial.tfs <- intersect(tf.genes, endo.genes.plot)
+
+# Figure out how they should be ordered on the plot
+endo.spatial.tf.order <- t(apply(ss[endo.spatial.tfs,] > 0.75, 1, function(x) {
+  y <- which(x)
+  return(c(min(y), max(y)))
+}))
+endo.spatial.tfs.ordered <- endo.spatial.tfs[order(endo.spatial.tf.order[,1], endo.spatial.tf.order[,2], decreasing=c(F, F), method="radix")]
+
+# Make a heatmap of just the TFs
+pdf(paste0(main.path, "URD/Endoderm/Endoderm-SpatialTFs.pdf"), width=8.5, height=4.50)
+gplots::heatmap.2(as.matrix(ss[endo.spatial.tfs.ordered,]),Rowv=F, Colv=F, dendrogram="none", col=cols, trace="none", density.info="none", key=F, cexCol=0.8, cexRow=1, margins = c(2.5,13), lwid=c(0.3,4), lhei=c(0.6,4), labCol=NA, colsep=c(46, 70), sepwidth=c(1,1))
+title("Endoderm Spatial TFs", line=2, adj=0.5, cex.main=1.5)
+title("Foot / Body Column", line=-17.5, adj=0.1, cex.main=0.8)
+title("Tentacle", line=-17.5, adj=0.5, cex.main=0.8)
+title("Hypo", line=-17.5, adj=0.7, cex.main=0.8)
 dev.off()
 ```
 
 # Save results
 
 ```{r save-results}
-write(tentacle.genes, file=paste0(main.path, "URD/Endoderm/Genes-Endoderm-Varying-Tentacle.txt"))
-write(hypo.genes, file=paste0(main.path, "URD/Endoderm/Genes-Endoderm-Varying-Hypostome.txt"))
+# Make data frame of genes and their cluster identities
+write.table(
+  data.frame(
+    gene=endo.genes.plot[h.ss$order],
+    cluster=h.ss.clust.ord[h.ss$order]
+  ),
+  quote=F, row.names=F, sep="\t",
+  file=paste0(main.path, "URD/Endoderm/Genes-Endoderm-Varying.txt")
+)
+# Save objects
 saveRDS(splines, file=paste0(main.path, "URD/Endoderm/Splines-Endoderm.rds"))
 saveRDS(hydra.en.tree, file=paste0(main.path, "URD/Endoderm/Hydra_URD_Endoderm.rds"))
 ```
